<resources>
    <string name="app_name">FinalProjectMobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">LogOut</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="aggiungi_una_prenotazione">Aggiungi una prenotazione</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="aggiungi_un_cliente">Aggiungi un Cliente</string>
    <string name="clienti">Clienti</string>
</resources>