<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home"
            android:visible="true" />
    </group>
    <item android:title="@string/clienti">
        <menu>
            <item
                android:id="@+id/nav_clienti"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/clienti" />
            <item
                android:id="@+id/nav_aggiungiCliente"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/aggiungi_un_cliente" />
        </menu>
    </item>

    <item android:title="@string/prenotazioni">
        <menu>
            <item
                android:id="@+id/nav_prenotazioni"
                android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/prenotazioni" />
            <item
                android:id="@+id/nav_aggiungiPrenotazione"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/aggiungi_una_prenotazione" />
        </menu>
    </item>
</menu>